; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_fsldma.c_fsl_dma_memcpy_issue_pending.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_fsldma.c_fsl_dma_memcpy_issue_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_chan = type { i32 }
%struct.fsldma_chan = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_chan*)* @fsl_dma_memcpy_issue_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fsl_dma_memcpy_issue_pending(%struct.dma_chan* %0) #0 {
  %2 = alloca %struct.dma_chan*, align 8
  %3 = alloca %struct.fsldma_chan*, align 8
  store %struct.dma_chan* %0, %struct.dma_chan** %2, align 8
  %4 = load %struct.dma_chan*, %struct.dma_chan** %2, align 8
  %5 = call %struct.fsldma_chan* @to_fsl_chan(%struct.dma_chan* %4)
  store %struct.fsldma_chan* %5, %struct.fsldma_chan** %3, align 8
  %6 = load %struct.fsldma_chan*, %struct.fsldma_chan** %3, align 8
  %7 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %6, i32 0, i32 0
  %8 = call i32 @spin_lock_bh(i32* %7)
  %9 = load %struct.fsldma_chan*, %struct.fsldma_chan** %3, align 8
  %10 = call i32 @fsl_chan_xfer_ld_queue(%struct.fsldma_chan* %9)
  %11 = load %struct.fsldma_chan*, %struct.fsldma_chan** %3, align 8
  %12 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock_bh(i32* %12)
  ret void
}

declare dso_local %struct.fsldma_chan* @to_fsl_chan(%struct.dma_chan*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @fsl_chan_xfer_ld_queue(%struct.fsldma_chan*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
